# pickup

./: .gitignore  README.md
backend/: manage.py  pyproject.toml
backend/board/: api.py  models.py
backend/pickup/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/users/: api.py
backend/users/migrations/: 0001_initial.py
frontend/: .prettierrc  package.json
frontend/src/: app.css  app.html
frontend/src/components/: BottomNavigation.svelte  HeaderNavigation.svelte
frontend/src/lib/: utils.js
frontend/src/lib/stores/: toastStore.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/@[username]/[itemId]/: +page.js  +page.svelte
frontend/src/routes/add/: +page.svelte
frontend/src/routes/user/: +page.svelte
frontend/src/routes/user/login/: +page.svelte
frontend/src/routes/user/register/: +page.svelte
frontend/src/routes/user/register/success/: +page.svelte
